# complete these after
[workspace]
members = [
    "NoAxiom/kernel",
    "NoAxiom/lib/console",
    "NoAxiom/lib/ksync",
    "NoAxiom/lib/arch",
    "NoAxiom/lib/fatfs",
    "NoAxiom/user/apps/*",
    "NoAxiom/user/lib",
]
# exclude = ["NoAxiom/user/.*"]
resolver = "2"

[workspace.dependencies]
arch = { path = "NoAxiom/lib/arch" }
ksync = { path = "NoAxiom/lib/ksync" }
console = { path = "NoAxiom/lib/console" }
fatfs = { path = "NoAxiom/lib/fatfs", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_info",
] }

# [profile.release]
# debug = true
# opt-level = 0           # 优化级别,最低是0,最高是3, 0方便debug
# overflow-checks = false # 关闭整数溢出检查
