[workspace]
members = [
    "NoAxiom/kernel",
    "NoAxiom/user/libd",
    "NoAxiom/user/apps/runtests",
    "NoAxiom/user/apps/run_busybox",
]
resolver = "2"

[workspace.dependencies]
log = "0.4.22"
bitflags = "2.6.0"
arch = { path = "NoAxiom/lib/arch" }
ksync = { path = "NoAxiom/lib/ksync" }
console = { path = "NoAxiom/lib/console" }
fatfs = { path = "NoAxiom/lib/fatfs", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_info",
] }
config = { path = "NoAxiom/lib/config" }
driver = { path = "NoAxiom/lib/driver" }
include = { path = "NoAxiom/lib/include" }
memory = { path = "NoAxiom/lib/memory" }
platform = { path = "NoAxiom/lib/platform" }
libd = { path = "NoAxiom/user/libd" }

[profile.release]
debug = true
# 优化级别,最低是0,最高是3, 0方便debug
opt-level = 3
# 关闭整数溢出检查
overflow-checks = false
# for loongarch64, tell the compiler to abort on panic instead of unwinding
panic = "abort"
