# workspace for kernel
[workspace]
members = ["kernel"]
resolver = "2"

[workspace.dependencies]
log = "0.4.22"
bitflags = "2.6.0"
arch = { path = "lib/arch" }
kfuture = { path = "lib/kfuture" }
ksync = { path = "lib/ksync" }
fatfs = { path = "lib/fatfs", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_info",
] }
config = { path = "lib/config" }
driver = { path = "lib/driver" }
include = { path = "lib/include" }
memory = { path = "lib/memory" }
platform = { path = "lib/platform" }
virtio-drivers-async = { git = "https://github.com/YuXuaann/virtio-drivers-async" }
virtio-drivers = { git = "https://github.com/YuXuaann/virtio-drivers-async", branch = "virtio-driver-0.9.0-nightly" }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", default-features = false, features = [
#     "alloc",
#     "embedded-io",
# ] }

[profile.release]
debug = true
# 优化级别,最低是0,最高是3, 0方便debug
opt-level = 3
# 关闭整数溢出检查
overflow-checks = false
# for loongarch64, tell the compiler to abort on panic instead of unwinding
panic = "abort"
