[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

[features]
multicore = []
sv39 = []
sv48 = []
riscv_qemu = []
vf2 = []
dev = []
busybox = []
preliminary = []
customized_sh = []
runtests = []
uitest = []
ramdisk = []
uart = []
board_qemu = []
async_fs = []

[dependencies]
# extern libs
log = "0.4"
riscv = "0.11"
bitflags = "2.6.0"
xmas-elf = "0.9.0"
virtio-drivers = "0.7.5"
crate_interface = "0.1"
hashbrown = "0.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
    "log",
] }
rand_core = "0.6.4"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
managed = { version = "0.8.0", default-features = false, features = ["map"] }
uart16550 = { version = "0.0.1" }
uart8250 = { git = "https://github.com/os-module/uart-rs.git" }
plic = { git = "https://github.com/os-module/plic" }
ringbuffer = "0.15.0"
fdt = { git = "https://github.com/repnop/fdt" }
async-task = { version = "4", default-features = false }
buddy_system_allocator = "0.9.0"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
paste = "1"
lru = "0.12.5"
bit_field = "0.10.1"
async-trait = "0.1.50"
nb = "1.0.0"
volatile = "0.2"
downcast-rs = { version = "1.2.0", default-features = false }
array-init = "2.1.0"
libc = "0.2"
spin = "0.7.0"
atomic_enum = "0.3.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# no_axiom defined libs
arch = { path = "../lib/arch" }
ksync = { path = "../lib/ksync" }
console = { path = "../lib/console" }
fatfs = { path = "../lib/fatfs", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_info",
] }
ext4_rs = { git = "https://github.com/YuXuaann/ext4_rs-async-smp" }
