[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

[features]
multicore = []
riscv_qemu = []
vf2 = []
dev = []
busybox = []
preliminary = []
customized_sh = []
runtests = []
uitest = []
ramdisk = []
uart = []
board_qemu = []
qemu = ["platform/qemu"]
interruptable_async = ["driver/interruptable_async"]
async = ["driver/async"]
glibc = []

[dependencies]
# extern libs
log = { workspace = true }
bitflags = { workspace = true }
xmas-elf = "0.9.0"
virtio-drivers = "0.7.5"
crate_interface = "0.1"
hashbrown = "0.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
    "log",
] }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
managed = { version = "0.8.0", default-features = false, features = ["map"] }
# uart16550 = { version = "0.0.1" }
# uart8250 = { git = "https://github.com/os-module/uart-rs.git" }
ringbuffer = "0.15.0"
async-task = { version = "4", default-features = false }
buddy_system_allocator = "0.9.0"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
paste = "1"
lru = "0.12.5"
bit_field = "0.10.1"
async-trait = "0.1.50"
nb = "1.0.0"
volatile = "0.2"
downcast-rs = { version = "1.2.0", default-features = false }
array-init = "2.1.0"
libc = "0.2"
spin = "0.7.0"
atomic_enum = "0.3.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-lite = { version = "1.13.0", default-features = false, features = [
    "alloc",
] }
strum = { version = "0.26", default_features = false, features = ["derive"] }
# no_axiom defined libs
ext4_rs = { git = "https://github.com/YuXuaann/ext4_rs-async-smp" }
arch = { workspace = true }
ksync = { workspace = true }
console = { workspace = true }
fatfs = { workspace = true }
config = { workspace = true, features = ["multicore"] }
driver = { workspace = true }
include = { workspace = true }
memory = { workspace = true }
platform = { workspace = true }
