[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
config = { workspace = true }
bitflags = { workspace = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.11" }
sbi-rt = { version = "0.0.3", features = ["legacy"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"
