[package]
name = "arch"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
config = { workspace = true }
bitflags = { workspace = true }
page_table_entry = "0.4"
bit_field = "0.10"
virtio-drivers = "0.7.5"
spin = "0.9"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.11" }
sbi-rt = { version = "0.0.3", features = ["legacy"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
rlibc = "1.0.0"
volatile = "0.4.6"
loongArch64 = "0.2.4"
polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = [
    "graphic",
    "logger",
] }
devices = { git = "https://github.com/Byte-OS/devices.git" }
fdt = { git = "https://github.com/repnop/fdt" }
