[package]
name = "device"
version = "0.1.0"
edition = "2021"

[features]
qemu = []

[dependencies]
arch = { workspace = true }
config = { workspace = true }
ksync = { workspace = true }
log = { workspace = true }
driver = { workspace = true }
include = { workspace = true }
fdt = "0.1.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
virtio-drivers-async = { workspace = true }
virtio-drivers = { workspace = true }
