[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
include = { workspace = true }
arch = { workspace = true }
platform = { workspace = true }
ksync = { workspace = true }
kfuture = { workspace = true }
log = { workspace = true }
config = { workspace = true }
bitflags = { workspace = true }
memory = { workspace = true }
fdt = "0.1.5"
plic = { git = "https://github.com/os-module/plic" }
async-trait = "0.1.50"
virtio-drivers-async = { git = "https://github.com/YuXuaann/virtio-drivers-async" }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", default-features = false, features = [
#     "alloc",
#     "embedded-io",
# ] }
virtio-drivers = { git = "https://github.com/YuXuaann/virtio-drivers-async", branch = "virtio-driver-0.9.0-nightly" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
    "log",
] }
cfg-if = "1.0"
volatile = "0.2"
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
