[package]
name = "klog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../ksync" }
sbi = { path = "../sbi" }

log = "0.4"
spin = "0"
crate_interface = "0.1"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
